@@ -2,6 +2,7 @@
 
 Output exiftool version
 Only require the path to the extracted facebook download now
+Error if exiftool is not called exiftool.exe on Windows
 
 0.4
 
